--- a/my-type-lang/server/package.json
+++ b/my-type-lang/server/package.json
@@ -12,7 +12,9 @@
 		"url": "https://github.com/Microsoft/vscode-extension-samples"
 	},
 	"dependencies": {
-		"vscode-languageserver": "^3.4.2"
+		"vscode": "^1.1.4",
+		"vscode-languageserver": "^3.4.2",
+		"vscode-uri": "^1.0.1"
 	},
 	"scripts": {
 		"installServer": "installServerIntoExtension ../client ./package.json ./tsconfig.json",
