--- a/DotNetParser/EasyTypes.SqlGenerator/EasyTypes.SqlGenerator.fsproj
+++ b/DotNetParser/EasyTypes.SqlGenerator/EasyTypes.SqlGenerator.fsproj
@@ -5,15 +5,15 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>e6c09f3c-5c65-426a-b6c4-fe12a81b1db8</ProjectGuid>
+    <ProjectGuid>06d7c7bc-9cc7-4b13-9472-dfa82cbfa71e</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DotNetParser</RootNamespace>
-    <AssemblyName>DotNetParser</AssemblyName>
+    <RootNamespace>EasyTypes.SqlGenerator</RootNamespace>
+    <AssemblyName>EasyTypes.SqlGenerator</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <UseStandardResourceNames>true</UseStandardResourceNames>
     <TargetFSharpCoreVersion>4.4.1.0</TargetFSharpCoreVersion>
-    <Name>DotNetParser</Name>
+    <Name>EasyTypes.SqlGenerator</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -58,24 +58,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
-    <Compile Include="Common.fs" />
-    <Compile Include="PrimitivesParserTypes.fs" />
-    <Compile Include="PrimitivesParser.fs" />
-    <None Include="Samples\samplePrimitives.ty">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Samples\sampleTypes.ty">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Samples\BuiltInPrimitives.ty">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <Compile Include="CustomTypesParserTypes.fs" />
-    <Compile Include="CustomTypesParser.fs" />
-    <Compile Include="SemanticTypes.fs" />
-    <Compile Include="BuiltinPrimitives.fs" />
-    <Compile Include="SemanticBuilders.fs" />
-    <Compile Include="SemanticCompiler.fs" />
+    <Compile Include="SqlTableGenerator.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +74,13 @@
     <Reference Include="System.ValueTuple">
       <Private>True</Private>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotNetParser\DotNetParser.fsproj">
+      <Name>DotNetParser</Name>
+      <Project>{e6c09f3c-5c65-426a-b6c4-fe12a81b1db8}</Project>
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
