--- a/DotNetParser/EasyTypes.SqlGenerator/EasyTypes.SqlGenerator.fsproj
+++ b/DotNetParser/EasyTypes.SqlGenerator/EasyTypes.SqlGenerator.fsproj
@@ -58,7 +58,9 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
+    <Compile Include="SqlCommon.fs" />
     <Compile Include="SqlTableGenerator.fs" />
+    <Compile Include="SqlStoredProcGenerator.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,12 +70,16 @@
       <AssemblyName>FSharp.Core.dll</AssemblyName>
       <HintPath>$(MSBuildProgramFiles32)\Reference Assemblies\Microsoft\FSharp\.NETFramework\v4.0\$(TargetFSharpCoreVersion)\FSharp.Core.dll</HintPath>
     </Reference>
+    <Reference Include="PoorMansTSqlFormatterLib35">
+      <HintPath>..\packages\PoorMansTSQLFormatter.1.4.3.1\lib\net35\PoorMansTSqlFormatterLib35.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.ValueTuple">
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotNetParser\DotNetParser.fsproj">
