--- a/DotNetParser/EasyTypes.FSharpGenerator/EasyTypes.FSharpGenerator.fsproj
+++ b/DotNetParser/EasyTypes.FSharpGenerator/EasyTypes.FSharpGenerator.fsproj
@@ -185,6 +185,13 @@
       <Private>True</Private>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EasyTypes.Core\EasyTypes.Core.fsproj">
+      <Name>EasyTypes.Core</Name>
+      <Project>{56979794-a657-4aa7-ae59-8b233200b9d0}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+  </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
