--- a/DotNetParser/EasyTypes.FSharpGenerator/EasyTypes.FSharpGenerator.fsproj
+++ b/DotNetParser/EasyTypes.FSharpGenerator/EasyTypes.FSharpGenerator.fsproj
@@ -58,6 +58,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="DataProviderGenerator.fs" />
     <Compile Include="RenditionGenerator.fs" />
+    <Compile Include="DomainGenerator.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
