--- a/DotNetParser/EasyTypes.FSharpGenerator/EasyTypes.FSharpGenerator.fsproj
+++ b/DotNetParser/EasyTypes.FSharpGenerator/EasyTypes.FSharpGenerator.fsproj
@@ -56,6 +56,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="ChoicesPrimitiveGenerator.fs" />
     <Compile Include="PrimitiveGeneration.fs" />
     <Compile Include="DataProviderGenerator.fs" />
     <Compile Include="RenditionGenerator.fs" />
