--- a/DotNetParser/EasyTypes.FSharpGenerator/EasyTypes.FSharpGenerator.fsproj
+++ b/DotNetParser/EasyTypes.FSharpGenerator/EasyTypes.FSharpGenerator.fsproj
@@ -61,6 +61,7 @@
     <Compile Include="DataProviderGenerator.fs" />
     <Compile Include="RenditionGenerator.fs" />
     <Compile Include="DomainGenerator.fs" />
+    <Compile Include="PrimitivesValidationControllerGenerator.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
