--- a/DotNetParser/EasyTypes.FSharpGenerator/EasyTypes.FSharpGenerator.fsproj
+++ b/DotNetParser/EasyTypes.FSharpGenerator/EasyTypes.FSharpGenerator.fsproj
@@ -6,6 +6,7 @@
     <OutputType>Exe</OutputType>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="OptionalStringPrimitiveGenerator.fs" />
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="ChoicesPrimitiveGenerator.fs" />
     <Compile Include="OptionalIntPrimitiveGenerator.fs" />
